--- a/experience/index.html
+++ b/experience/index.html
@@ -48,7 +48,7 @@
           <h2>Miraclus Orthotech Pvt Ltd.</h2>
         </div>
         <div class="desc">
-            <h3>DATA ANALYST</h3>
+            <h3>Junior Full Stack Developer</h3>
             <p>April 2023 - present</p>
         </div>
       </div>
