--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@ s0.parentNode.insertBefore(s1,s0);
           <h2>Miraclus Orthotech Pvt Ltd.</h2>
         </div>
         <div class="desc">
-            <h3>DATA ANALYST</h3>
+            <h3>Junior Full Stack Developer</h3>
             <p>April 2023 - present</p>
         </div>
       </div>
@@ -262,7 +262,7 @@ s0.parentNode.insertBefore(s1,s0);
    
 
   <div class="morebtn">
-    <a href="/experience" class="btn"><span>View All</span>
+    <a href="vimal/experience" class="btn"><span>View All</span>
       <i class="fas fa-arrow-right"></i>
   </a>
   </div>
