--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@ s0.parentNode.insertBefore(s1,s0);
    
 
   <div class="morebtn">
-    <a href="vimal/experience" class="btn"><span>View All</span>
+    <a href="/experience" class="btn"><span>View All</span>
       <i class="fas fa-arrow-right"></i>
   </a>
   </div>
